#####################################################################
## FILE: Makefile.am
# AUTHOR: James Johnson
# CREATE DATE: 2011
# PROJECT: DREME (MEME Suite)
# COPYRIGHT: 2011, UQ
#####################################################################

## Automake uses this file to generate a Makefile

# These files should be included with the distribution.
DATAFILES = centrimo.txt centrimo.html dreme-Klf1.xml site_counts.txt

EXTRA_DIST = $(DATAFILES)
