## $Id: Makefile.am 1421 2006-11-01 01:15:40Z cegrant $
##
## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies

SUBDIRS = motif.crp0 motif.Puf3p

DATAFILES = \
	adh.s \
	alphabet_dna.txt \
	alphabet_rna.txt \
	At.s \
	chr22.fasta \
	crp0.meme.html \
	crp0.meme.xml \
	crp0.meme.txt \
	crp0.fasta \
	crp0.s \
	crp0-test.fasta \
	dros.fasta \
	dros.oops.html \
	extended_dna.alph \
	farntrans5.s \
	INO_up800.s \
	Jaspar-subset.meme \
	Klf1-200-100.s \
	Klf1-200-100-shuffled.s \
	Klf1-200.s \
	Klf1.s \
	lex0.s \
	lipocalin.s \
	lipo.fasta \
	lipo.meme.html \
	lipo.meme.old.html \
	lipo-test.fasta \
	MCM1.fasta \
	mini-drosoph.s \
	noq.s \
	nr.freq \
	nt.freq \
	psp_test.psp \
	psp_test.s \
	Puf3p-200.s \
	Puf3p-20.s \
	Puf3p.s \
	sample.meme \
	simple.aln \
	simple.meme \
	test.aln \
	test_tree.txt \
	uprot.freq \
	yeast.nc.1.freq \
	yeast.nc.3.freq \
	yeast.nc.6.freq 

EXTRA_DIST = $(DATAFILES)
