## $Id: Makefile.am 1421 2006-11-01 01:15:40Z cegrant $
##
## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies

DATAFILES = \
  meme.INO_up800.oops.html \
  meme.INO_up800.oops.txt \
  meme.INO_up800.oops.xml \
  meme.INO_up800.tcm.html \
  meme.INO_up800.tcm.txt \
  meme.INO_up800.tcm.xml \
  meme.INO_up800.zoops.html \
  meme.INO_up800.zoops.txt \
  meme.INO_up800.zoops.xml \
  meme.adh.oops.html \
  meme.adh.oops.txt \
  meme.adh.oops.xml \
  meme.adh.tcm.html \
  meme.adh.tcm.txt \
  meme.adh.tcm.xml \
  meme.adh.zoops.html \
  meme.adh.zoops.txt \
  meme.adh.zoops.xml \
  meme.crp0.oops.txt \
  meme.crp0.oops.html \
  meme.crp0.oops.xml \
  meme.crp0.tcm.html \
  meme.crp0.tcm.txt \
  meme.crp0.tcm.xml \
  meme.crp0.zoops.html \
  meme.crp0.zoops.txt \
  meme.crp0.zoops.xml \
  meme.farntrans5.oops.html \
  meme.farntrans5.oops.txt \
  meme.farntrans5.oops.xml \
  meme.farntrans5.tcm.html \
  meme.farntrans5.tcm.txt \
  meme.farntrans5.tcm.xml \
  meme.farntrans5.zoops.html \
  meme.farntrans5.zoops.txt \
  meme.farntrans5.zoops.xml \
  meme.lex0.zoops.txt \
  meme.lipocalin.oops.html \
  meme.lipocalin.oops.txt \
  meme.lipocalin.oops.html \
  meme.lipocalin.tcm.html \
  meme.lipocalin.tcm.txt \
  meme.lipocalin.tcm.xml \
  meme.lipocalin.zoops.html \
  meme.lipocalin.zoops.txt \
  meme.lipocalin.zoops.xml \
  meme.psp_test.zoops

EXTRA_DIST = $(DATAFILES)
