#####################################################################
## FILE: Makefile.am
# AUTHOR: William Stafford Noble, Charles E. Grant
# CREATE DATE: 2003
# PROJECT: Meta-MEME
# COPYRIGHT: 2003, UW
#####################################################################

## Automake uses this file to generate a Makefile

# This Makefile builds the test output used to test FIMO.

# These files should be removed as part of the 'make clean' target.
CLEANFILES = 

# These files should be included with the distribution.
DATAFILES = \
	default-no-fasta.txt \
  default-comet-no-fasta.txt \
  default-msgf-no-fasta.txt \
	default-with-fasta-no-mass-in-motif-names.txt \
	default-with-fasta.txt \
	elim0.txt \
	elim3.txt \
	filterxcorrrankle3.txt \
	modl-default.txt \
	mtfx-s0.05-c1-no-mass-in-motif-names-bg-kmers-only-bgfreqs.txt \
	mtfx-s0.05-c1-no-mass-in-motif-names.txt \
	mtfx-s0.05-c1-smpmT.txt \
	mtfx-s0.05-c1.txt \
	small-comet-mod.txt \
	small-msgf-mod.txt \
	single-motif-per-mass.txt \
	small-tide-mod-1-out-of-2.txt \
	small-tide-mod-2-out-of-2.txt \
	small-tide-mod-phospho.fasta \
	small-tide-mod-phospho.txt \
	small-tide-mod.txt \
	small-yeast-prealigned-no-unknowns.txt \
	small-yeast.fasta
EXTRA_DIST = $(DATAFILES)
