#####################################################################
## FILE: Makefile.am
# AUTHOR: James Johnson
# CREATE DATE: 2011
# PROJECT: SpaMo (MEME Suite)
# COPYRIGHT: 2011, UQ
#####################################################################

## Automake uses this file to generate a Makefile

# These files should be included with the distribution.
DATAFILES = \
  limits.fasta \
  limits.html \
  primary.meme \
  random.fasta \
  random.html \
  secondary.meme


EXTRA_DIST = $(DATAFILES)
